# GenesisIO

./: CMakeLists.txt  README.md
Headers/: genio.hpp
Libraries/MultiNEAT/src/: NeuralNetwork.cpp  NeuralNetwork.h
Models/: MUJOCO_LOG.TXT  ant.xml  inverted_double_pendulum.xml
Sources/: genio.cpp
include/: genio.hpp
model/: ant.xml
src/: basic.cpp  example2.cpp  genio.cpp  mjkey.txt  simulate.cpp
